--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -10,3 +10,10 @@ jobs:
   build:
       run-on: ubuntu-latest
       container: python:3.9-slim
+      
+steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Run Python script
+      run: echo "Hello from inside the GitHub Action!
