--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -8,12 +8,6 @@ on:
 
 jobs:
   build:
-      run-on: ubuntu-latest
+      runs-on: ubuntu-latest
       container: python:3.9-slim
-      
-steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
 
-    - name: Run Python script
-      run: echo "Hello from inside the GitHub Action!
