--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -11,3 +11,9 @@ jobs:
       runs-on: ubuntu-latest
       container: python:3.9-slim
 
+ steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Hello from Action
+      run: echo "GitHub Actions running 🎉"
