--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -1,14 +1,20 @@
-name : CI workflow
+name: CI workflow
 
 on:
   push:
     branches:
       - main
   pull_request:
-      branches: 
-        - main
+    branches: 
+      - main
 
 jobs:
   build:
-      runs-on: ubuntu-latest
-      container: python:3.9-slim
+    runs-on: ubuntu-latest
+
+    container:
+      image: python:3.9-slim
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
